works with routing now, and fixed some css/layout problems

--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,14 @@
   align-items: center;
   
 }
+
 .login-element{
-  padding: 1% 0%;    
+  padding-top: 1%;
+  padding-right: 0;
+  padding-bottom: 0;
+  padding-left: 0; 
+  size:20%;
 } 
+.spacer{
+  padding:5%;
+}
